# wordle-squire

./: Cargo.toml  Dockerfile  README.md  solutions.csv
src/: main.rs
web/: package-lock.json  package.json
web/public/: index.html  manifest.json
web/src/: App.tsx  index.css
